--- a/etiquetas-contenido/index.html
+++ b/etiquetas-contenido/index.html
@@ -6,6 +6,7 @@
     <title>Contenido</title>
 </head>
 <body>
+    <!-- https://canincluede.glitch.me/ saber si una etiqueta puede ir dentro de otra-->
     <h1>etiquetas de contenido</h1>
     
     <header> HEADER define un encabezado en HTML, puede ser de secciones o de la página web
