--- a/listas-tablas/listas.html
+++ b/listas-tablas/listas.html
@@ -49,6 +49,21 @@
         <li>Capacitarme para ser un  muy buen maquetador en HTML y  CSS</li>
         <li>irme a vivir a USA</li>
     </ul>
-    
+
+    <!-- menú de navecación con ul  -->
+    <nav>
+        <ul>
+            <li>
+                <a href="·"> ir a YouTube</a>
+            </li>
+            <li>
+                <a href="·"> ir a Facebook</a>
+            </li>
+            <li>
+                <a href="·"> ir a Twitter</a>
+            </li>
+        </ul>
+    </nav>
+
 </body>
 </html>
