--- a/HTML/etiquetas-contenido/atributos.html
+++ b/HTML/etiquetas-contenido/atributos.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="../estilos.css" type="text/css" media="all">
 </head>
 <body>
-    
-    <!-- Class  (se usa mas en CSS)  -->
+    <h1>class ID y desplazamiento por anclas</h1>
+    <p>Class  (se usa mas en CSS) </p> 
 
     <p class="bold" id="parrafo1">Hola mundo </p>
     <p class="red" id="parrafo2">Hola mundo </p>
@@ -17,8 +17,8 @@
     <p class=" active bold" id="parrafo3">Hola mundo </p>
     <h1 class="active bold" id="parrafo3">Hola mundo </h1>
 
-    <!-- ID (se usa mas en JS) -->
-    <!-- Desplazamiento por anclas -->
+    <p>ID (se usa mas en JS)</p>
+    <p>Desplazamiento por anclas </p> 
     <section id="acerca-de">
         <nav>
             <a href="#acerca-de">Acerca de </a>
