--- a/HTML/etiquetas-contenido/index.html
+++ b/HTML/etiquetas-contenido/index.html
@@ -6,7 +6,7 @@
     <title>Contenido</title>
 </head>
 <body>
-    <!-- https://canincluede.glitch.me/ saber si una etiqueta puede ir dentro de otra-->
+    <p>https://canincluede.glitch.me/ saber si una etiqueta puede ir dentro de otra</p> 
     <h1>etiquetas de contenido</h1>
     
     <header> HEADER define un encabezado en HTML, puede ser de secciones o de la página web
@@ -14,7 +14,7 @@
             <a href="#">ir a YouTube</a><br>
             <a href="#">ir a Twitter</a><br>
         </nav>
-        <h1>Bienvenido a mi página H1 se utiliza solo una vez por página y suele ir dentro del header</h1>
+        <h1>Bienvenido a mi página, H1 se utiliza solo una vez por página y suele ir dentro del header</h1>
     </header>  
 
     <main>MAIN define el contenido principal del documento HTML, solo debe haber 1 solo por página <br>
