--- a/HTML/etiquetas-extra/index.html
+++ b/HTML/etiquetas-extra/index.html
@@ -7,13 +7,11 @@
 </head>
 <body>
     <h1>Etiquetas extra</h1>
+    <h2>imágenes responsive</h2>
     <p>para meter imágenes en bloque utiliza figure, también puedes usar figcaption para agregarle un pie de foto</p>
+    
     <figure>
         <img src="./assets/`logo+fondo.png" width="150">
-        <figcaption>logo con base </figcaption>
-    </figure>
-    <figure>
-        <img src="./assets/`logo+fondo - copia.png" width="150">
         <figcaption>logo con base 2(esta etiqueta es opcional) </figcaption>
     </figure>
 
