--- a/HTML/formularios/index.html
+++ b/HTML/formularios/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="../estilos.css">
 </head>
 <body>
-    <!-- el action del form determina a donde se va a enviarla información del formulario -->
-    <h1>Aplica al trabajo</h1>
+    <p>el action del form determina a donde se va a enviarla información del formulario </p>
+    <h1>formularios    </h1>
+    <h2>Aplica al trabajo</h2>
     <form action="">
         <label for="nombre">Ingresa tu nombre</label>
         <input type="text" name="" id="nombre" placeholder="ingresa tu nombre" maxlength="10" minlength="3"  >
