--- a/HTML/listas-tablas/tablas.html
+++ b/HTML/listas-tablas/tablas.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../estilos.css">
 </head>
 <body>
+    <h1>tablas </h1>
     <table>
         <caption>nombre de la tabla</caption>
         <tr>
