--- a/CSS/box-model/index.html
+++ b/CSS/box-model/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <main>
-        <h1 class="title">Entra a mi tienda online y disfruta de ofertas!</h1>
-        <p class="paragraph">Entrar al css y revisar todos los atributos que se modifican en esta página. <br> Si a la propiedad padding le paso un solo valor se aplica a los 4 laterales, si le paso  3  el 1ro se aplica arriba, el 2do a ambos lados y el 3ro abajo, si le paso 2, el 1ro se aplica arriba y abajo y el 2do a los lados y si le paso 4 , el 1ro arrina, el 2do a la derecha, el 3ro abajo y el 4to a la izquierda</p>
+        <h1 class="title">Margin, Border, Padding, Content </h1>
+        <p class="paragraph">Entrar al css y revisar todos los atributos que se modifican en esta página. <br> Si a la propiedad padding, margin o border, le paso un solo valor se aplica a los 4 laterales, si le paso  3  el 1ro se aplica arriba, el 2do a ambos lados y el 3ro abajo, si le paso 2, el 1ro se aplica arriba y abajo y el 2do a los lados y si le paso 4 , el 1ro arriba, el 2do a la derecha, el 3ro abajo y el 4to a la izquierda <br><br> Si establezco alto y ancho, pero añado borde o padding este se suma al tamaño total, para evitar esto hay que establecer el valor de box-sizing en border-box y no en content box que viene por defecto</p>
 
         <a href="#" class="cta">Accede a las ofertas</a>
     </main>
