css unidades de medidas

--- a/CSS/colores-fondos/index.html
+++ b/CSS/colores-fondos/index.html
@@ -57,6 +57,7 @@
         rgba(255, 0, 255, 0.571)), url('./logo\ PMS.png'); </p>
 
     <main class="main">
+        <div class="main__circle"></div>
         <h1 class="main__title">Sección con BMS <br> propiedades para los textoooooooooooooooooooooooos</h1>
         <p class="main__paragraph">h1 <br> letter-spacing: 2px; permite definir la separación entre letras <br>
             word-spacing: 5px; permite definir la separación entre palabras <br> overflow-wrap: break-word; rompe las
@@ -73,6 +74,7 @@
             unidades enteras por el font size obtenemos el valor en píxeles) <br> a <br> text-decoration: none; se puede usar para quitar el subrayado de los enlaces 
         </p>
         <a href="#" class="main__cta">Entra ahora</a>
+        <p>border-radius: 10px; permite redondear el borde de contenedores <br> 50px es el mayor valor</p>
     </main>
 
     <p>al definir font-family: cursive, Helvetica, sans-serif; estamos garantizando que si una de estas fuentes está mal
