unidades de medida fin

--- a/CSS/unidades-medidas/index.html
+++ b/CSS/unidades-medidas/index.html
@@ -8,10 +8,25 @@
 </head>
 <body>
     <main class="main">
+
         <h1 class="main__title">Unidades de medida</h1>
+        <p>Establecer tamaños de letra relativos permite webs mas adaptables RECOMENDADO(rem)<br> em es una unidad de medida relativa al tamaño fuente del padre o del ancestro mas cercano con un font-size definido. <br> rem es una unidad relativa al root del html (la etiqueta html) <br><br></p>
+
+        <p>El viewport es el área visible del navegador <br> 
+        vw es una unidad de medida relativa al ancho del viewport (puede tomar valores del 0 al  100) <br> vh es una unidad relativa al alto del viewport <br> El porcentaje es relativo al tamaño del padre del elemento, normalmente el ancho de una página si está establecido pero el alto no, pr lo tanto si se quiere establecer un valor de height en porciento deberá especificarse el valor de height del padre</p>
     </main>
 
     <img src="./logo PMS.png" alt="" class="img">
     <p> el ancho de la imagen se puede establecer en px,  cm, mm o pt(puntos)</p>
+
+    <article class="card">
+        <img src="./logo PMS.png" alt="" class="card__img">
+
+        <h1 class="card__title"> Aprende HTML y CSS desde 0</h1>
+
+        <p class="card__paragraph"> la propiedad box-shadow: 20px 400px; permite establecer una sombra y recibe como valores el desplazamiento horizontal y vertical, también si añadimos un 3er valor podemos establecer el blur (difuminado) y con un 4to establecemos es sprid (que tanto queremos que se esparza) y por último podemos establecer el color y transparencia<br> <br> Estableciendo min-height: 300vh; en el body creamos un scroll </p>
+
+        <a href="#" class="card__cta"> Aprende ahora</a>
+    </article>
 </body>
 </html>
