--- a/CSS/position/index.html
+++ b/CSS/position/index.html
@@ -16,25 +16,19 @@
 
     <p class="paragraph"> Los elementos traen por defecto position:static. <br>El flujo del navegador posiciona los elementos a la izquierda y los nuevos bloques debajo, si creamos muchos elementos inline se colocaran uno al lado del otro alineados a la izquierda y al acabarse el espacio comienzan en una nueva línea debajo <br><br></p>
 
-    <a href="">hola</a>
-    <a href="">hola</a>
-    <a href="">hola</a>
-    <a href="">hola</a>
-    <a href="">hola</a>
-    <a href="">hola</a>
-    <a href="">hola</a>
-    <a href="">hola</a>
-    <a href="">hola</a>
-    <a href="">hola</a>
-    <a href="">hola</a>
-    <a href="">hola</a>
-    <a href="">hola</a>
-    <a href="">hola</a>
-    <a href="">hola</a>
-    <a href="">hola</a>
-    <a href="">hola</a>
-    <a href="">hola</a>
-    <a href="">hola</a>
+    <a href="">hola esto es un elemento en línea </a>
+    <a href="">hola esto es un elemento en línea </a>
+    <a href="">hola esto es un elemento en línea </a>
+    <a href="">hola esto es un elemento en línea </a>
+    <a href="">hola esto es un elemento en línea </a>
+    <a href="">hola esto es un elemento en línea </a>
+    <a href="">hola esto es un elemento en línea </a>
+    <a href="">hola esto es un elemento en línea </a>
+    <a href="">hola esto es un elemento en línea </a>
+    <a href="">hola esto es un elemento en línea </a>
+    <a href="">hola esto es un elemento en línea </a>
+    <a href="">hola esto es un elemento en línea </a>
+    
 
     <p class="paragraph">  Al establecer position: relative; podemos establecer una posición relativa a la posición original del elemento, pudiendo desplazarlo hacia arriba, abajo a los lados (desbloquea los atributos top, bottom, right y left) esto va a mover el elemento pero deja su espacio original reservado(solo lo mueve a él) .  <br><br> position: absolute; también desbloquea a top, bottom, right y left. esta propiedad va a sacar al elemento del flujo y lo va a posicionar absolutamente a su padre(contenedor) más cercano que tenga un position diferente a static, a la distancia que indiquemos en top, bottom, right y left. SI LE DAMOS A .PARENT POSITION:RELATIVE EL ELEMENTO POSICIONADO EN ABSOLUTO ENTONCES VIVIRÁ DENTRO DE ESTE CONTENEDOR <br><br> position: fixed; también desbloquea a top, bottom, right y left y sacar al elemento del flujo y lo va a posicionar absolutamente al viewport <br><br> También podemos usar valores negativos en estos atributos <hr>
     </p>
