--- a/CSS/css-grid/index.html
+++ b/CSS/css-grid/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS grid</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <h1>CSS-GRID</h1>
+    <div class="container">
+        <div class="item item--1">#1</div>
+        <div class="item item--2">#2</div>
+        <div class="item item--3">#3</div>
+        <div class="item item--4">#4</div>
+    </div>
     
+    <p>
+        si los elementos dentro del grid no tienen  un alto definido,  al declarar display: grid; estos se estirarán para ocupar todo el display <br>
+        grid-template-columns: repeat(6, 1fr); definirá el numero de columnas y 
+    grid-template-rows: repeat(3, 1fr); el número de filas. <br>
+    En los grid-items podemos definir la posición en el grid
+    <br> grid-column: 1/5; define que columnas ocupará y <br>
+    grid-row: 1/2; define que filas ocupará. <br>
+    gap: 20px; permite definir un espaciado entre elementos 
+    </p>
 </body>
 </html>
