--- a/CSS/flexbox/landing-page/index.html
+++ b/CSS/flexbox/landing-page/index.html
@@ -41,7 +41,7 @@
 
         <article class="main__texts">
             <h2 class="main__title">Cultiva tu belleza natural</h2>
-            <p class="main__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa amet a harum vero aliquam facilis ipsa error distinctio totam similique!</p>
+            <p class="main__paragraph">Esto es un diseño responsive  hecho con Flex-Box. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa amet a harum vero aliquam facilis ipsa error distinctio totam similique!</p>
 
             <a href="#" class="main__cta">Agenda tu cita</a>
         </article>
