proyecto-final-responsive

--- a/Proyecto-Final/index.html
+++ b/Proyecto-Final/index.html
@@ -71,25 +71,88 @@
             <h2 class="subtitle">Que aprenderé</h2>
             <div class="learn__articles">
                 <article class="learn__article">
-                    <img src="" alt="" class="learn__img">
+                    <img src="./assets/sitio web.svg" alt="" class="learn__img">
                     <h2 class="learn__title">Crear cualquier sitio web</h2>
                     <p class="paragraph">Aprende a diseñar sitios web con CSS</p>
                 </article>
                 <article class="learn__article">
-                    <img src="" alt="" class="learn__img">
+                    <img src="./assets/Internet.svg" alt="" class="learn__img">
                     <h2 class="learn__title">Sube tu sitio al internet</h2>
                     <p class="paragraph">subiremos el sitio a internet</p>
                 </article>
                 <article class="learn__article">
-                    <img src="" alt="" class="learn__img">
+                    <img src="./assets/responsive-design.svg" alt="" class="learn__img">
                     <h2 class="learn__title">Responsive design</h2>
                     <p class="paragraph">Aprenderas a adaptar los diseños a cualquier tamaño</p>
                 </article>
 
             </div>
         </section>
+
+        <section class="sponsor" id="sponsor">
+            <div class="sponsor__main container">
+
+                <article class="sponsor__texts">
+
+                    <h1 class="subtitle">Hosting sponsor oficial!</h1>
+                    <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore eius voluptas facere?</p>
+                    <a href="https://www.hostinger.com/alexcg" class="sponsor__cta">Accede a hostinger</a>
+
+                </article>
+
+                <figure class="sponsor__figure">
+
+                    <img src="./assets/logo PMS.png" alt="" class="sponsor__img">
+
+                </figure>
+
+            </div>
+        </section>
+
+        <section class="statistics">
+            <div class="statistics__container container">
+                
+                <article class="statistics__item">
+                    <h3 class="statistics__title">+4,700</h3>
+                    <p class="paragraph">Estudiantes han aprendido CSS desde cero</p>
+                </article>
+                <article class="statistics__item">
+                    <h3 class="statistics__title">25 HRS</h3>
+                    <p class="paragraph"> El curso tiene más de 25 horas de contenido</p>
+                </article>
+                <article class="statistics__item">
+                    <h3 class="statistics__title">807</h3>
+                    <p class="paragraph"> reseñas hacia el curso teniendo un promedio de 4.7 estrellas</p>
+                </article>
+
+                <a class="statistics__cta" href="https://alexcgdesign.com/cursocss">Ingresa Ahora</a>
+            </div>
+        </section>
     </main>
 
+    <footer class="footer" id="footer"></footer>
+        <section class="footer__container container">
+            <h2 class="subtitle">
+                Hecho por &copy; Peeta 
+            </h2>
+            <ul class="footer__contact">
+                <li class="footer__item">
+                    <a href="#" class="footer__link">
+                        <img src="./assets/twitter.svg" alt="" class="footer__img">
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">
+                        <img src="./assets/instagram.svg" alt="" class="footer__img">
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">
+                        <img src="./assets/youtube.svg" alt="" class="footer__img">
+                    </a>
+                </li>
+            </ul>
+        </section>
     <script src="./js/app.js"></script>
 </body>
 
