--- a/index.html
+++ b/index.html
@@ -10,35 +10,18 @@
 
 <body>
 
-    <nav class="menu menu__html">
-        <img src="./assets/html.svg" alt="" class="img__menu--html">
-        <ul class="menu__html">
-            <li class="menu__topic">
-                <a href="#" class="menu__link">1</a>
-            </li>
-            <li class="menu__topic">
-                <a href="#" class="menu__link">2</a>
-            </li>
-            <li class="menu__topic">
-                <a href="#" class="menu__link">3</a>
-            </li>
+    <header class="nav">
+        <p class="nav__title">
+            Curso HTML y CSS
+        </p>
+        <nav class="header__menu">
+            <a href="#" class="header__menu--link">Contenido</a>
+            <a href="#" class="header__menu--link">Objetivo</a>
+            <button class="header__menu--button">Iniciar</button>
+        </nav>
+    </header>
 
-        </ul>
-    </nav>
-    <nav class="menu menu__css">
-        <img src="./assets/css.svg" alt="" class="img__menu--html">
-        <ul class="menu__css">
-            <li class="menu__topic">
-                <a href="#" class="menu__link">1</a>
-            </li>
-            <li class="menu__topic">
-                <a href="#" class="menu__link">2</a>
-            </li>
-            <li class="menu__topic">
-                <a href="#" class="menu__link">3</a>
-            </li>
-        </ul>
-    </nav>
+   
 
 </body>
 
