--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
         </nav>
     </header>
 
+    <!-- HTML -->
     <div class="cont html">
-        <div class="html__logo">
-            <img class="html__logo--logo" src="./assets/html.svg" alt="">
-            <p class="html__text">HTML</p>
+        <div class="cont__logo">
+            <img class="cont__logo--logo" src="./assets/html.svg" alt="">
+            <p class="cont__text">HTML</p>
         </div>
-        <nav class="html__contents">
-            <ul class="html__links">
+        <nav class="cont__contents">
+            <ul>
                 <li class="link">
                     <a class="link__l"href="./HTML/textos.html">Textos</a>
                 </li>
@@ -61,6 +62,22 @@
                 <li class="link">
                     <a class="link__l" href="./HTML/enlaces-imágenes/imagenes/">Imágenes</a>
                 </li>
+            </ul>
+        </nav>
+    </div>
+
+    <!-- CSS -->
+    <div class="cont css">
+        <div class="cont__logo">
+            <img class="cont__logo--logo" src="./assets/css.svg" alt="">
+            <p class="cont__text">CSS</p>
+        </div>
+        <nav class="cont__contents">
+            <ul>
+                <li class="link">
+                    <a class="link__l" href="./CSS/box-model/index.html">Box model</a>
+                </li>
+                
             </ul>
         </nav>
     </div>
