--- a/index.html
+++ b/index.html
@@ -29,38 +29,38 @@
         </div>
         <nav class="cont__contents">
             <ul>
-                <li class="link">
-                    <a class="link__l"href="./HTML/textos.html">Textos</a>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link"href="./HTML/textos.html">Textos</a>
                 </li>
-                <li class="link">
-                    <a class="link__l" href="./HTML/formularios/index.html">Formularios</a>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./HTML/formularios/index.html">Formularios</a>
                 </li>
-                <li class="link">
-                    <a class="link__l" href="./HTML/iframe/">iFrame</a>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./HTML/iframe/">iFrame</a>
                 </li>
-                <li class="link">
-                    <a class="link__l" href="./HTML/listas-tablas/listas.html">Listas</a>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./HTML/listas-tablas/listas.html">Listas</a>
                 </li>
-                <li class="link">
-                    <a class="link__l" href="./HTML/listas-tablas/tablas.html">Tablas</a>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./HTML/listas-tablas/tablas.html">Tablas</a>
                 </li>
-                <li class="link">
-                    <a class="link__l" href="./HTML/audio-video/index.html">Audio-Videos</a>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./HTML/audio-video/index.html">Audio-Videos</a>
                 </li>
-                <li class="link">
-                    <a class="link__l" href="./HTML/etiquetas-atributos/">Etiquetas</a>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./HTML/etiquetas-atributos/">Etiquetas</a>
                 </li>
-                <li class="link">
-                    <a class="link__l" href="./HTML/etiquetas-atributos/atributos.html">Atributos</a>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./HTML/etiquetas-atributos/atributos.html">Atributos</a>
                 </li>
-                <li class="link">
-                    <a class="link__l" href="./HTML/etiquetas-extra/index.html">Etiquetas-extra</a>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./HTML/etiquetas-extra/index.html">Etiquetas-extra</a>
                 </li>
-                <li class="link">
-                    <a class="link__l" href="./HTML/enlaces-imágenes/enlace.html">Enlaces</a>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./HTML/enlaces-imágenes/enlace.html">Enlaces</a>
                 </li>
-                <li class="link">
-                    <a class="link__l" href="./HTML/enlaces-imágenes/imagenes/">Imágenes</a>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./HTML/enlaces-imágenes/imagenes/">Imágenes</a>
                 </li>
             </ul>
         </nav>
@@ -74,8 +74,8 @@
         </div>
         <nav class="cont__contents">
             <ul>
-                <li class="link">
-                    <a class="link__l" href="./CSS/box-model/index.html">Box model</a>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./CSS/box-model/index.html">Box model</a>
                 </li>
                 
             </ul>
