--- a/index.html
+++ b/index.html
@@ -77,6 +77,48 @@
                 <li class="cont__contents--elem">
                     <a class="cont__contents--link" href="./CSS/box-model/index.html">Box model</a>
                 </li>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./CSS/box-model/colapso.html">Colapso</a>
+                </li>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./CSS/box-model/elementos.html">Elementos</a>
+                </li>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./CSS/colores-fondos/index.html">Colores-Fondos</a>
+                </li>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./CSS/css-grid/index.html">CSS-grid</a>
+                </li>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./CSS/css-grid/galeria-imagenes/index.html">Galería-CSS-grid</a>
+                </li>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./CSS/custom-properties/index.html">Custom properties</a>
+                </li>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./CSS/flexbox/index.html">Flex-Box</a>
+                </li>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./CSS/flexbox/landing-page/index.html">Flex-Box-Landing-page</a>
+                </li>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./CSS/fundamentos/index.html">Fundamentos</a>
+                </li>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./CSS/mediaqueries/index.html">Mediaquery</a>
+                </li>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./CSS/position/index.html">Position</a>
+                </li>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./CSS/selectores/index.html">Selectores</a>
+                </li>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./CSS/unidades-medidas/index.html">Unidades de medida</a>
+                </li>
+                <li class="cont__contents--elem">
+                    <a class="cont__contents--link" href="./CSS/index.html">Estilos</a>
+                </li>
                 
             </ul>
         </nav>
