--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 <body>
 
     <header class="nav">
-        <p class="nav__title">
-            Curso HTML y CSS
-        </p>
+        <div class="title__border">
+            <div class="title">
+                <div class="frame">
+                    <div class="text">Curso HTML y CSS</div>
+                </div>
+            </div>
+        </div>
         <nav class="header__menu">
             <a href="#" class="header__menu--link">Contenido</a>
             <a href="#" class="header__menu--link">Objetivo</a>
@@ -30,7 +34,7 @@
         <nav class="cont__contents">
             <ul>
                 <li class="cont__contents--elem">
-                    <a class="cont__contents--link"href="./HTML/textos.html">Textos</a>
+                    <a class="cont__contents--link" href="./HTML/textos.html">Textos</a>
                 </li>
                 <li class="cont__contents--elem">
                     <a class="cont__contents--link" href="./HTML/formularios/index.html">Formularios</a>
@@ -90,7 +94,8 @@
                     <a class="cont__contents--link" href="./CSS/css-grid/index.html">CSS-grid</a>
                 </li>
                 <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./CSS/css-grid/galeria-imagenes/index.html">Galería-CSS-grid</a>
+                    <a class="cont__contents--link"
+                        href="./CSS/css-grid/galeria-imagenes/index.html">Galería-CSS-grid</a>
                 </li>
                 <li class="cont__contents--elem">
                     <a class="cont__contents--link" href="./CSS/custom-properties/index.html">Custom properties</a>
@@ -99,7 +104,8 @@
                     <a class="cont__contents--link" href="./CSS/flexbox/index.html">Flex-Box</a>
                 </li>
                 <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./CSS/flexbox/landing-page/index.html">Flex-Box-Landing-page</a>
+                    <a class="cont__contents--link"
+                        href="./CSS/flexbox/landing-page/index.html">Flex-Box-Landing-page</a>
                 </li>
                 <li class="cont__contents--elem">
                     <a class="cont__contents--link" href="./CSS/fundamentos/index.html">Fundamentos</a>
@@ -119,10 +125,18 @@
                 <li class="cont__contents--elem">
                     <a class="cont__contents--link" href="./CSS/index.html">Estilos</a>
                 </li>
-                
             </ul>
         </nav>
     </div>
+
+<footer class="footer">
+    <p class="info">
+        El objetivo de este sitio es recoger toda la información que tengo al respecto de HTML y CSS para mi posterior consulta o a quien pueda interesar
+    </p>
+    <p class="copy-right">
+        Copyright © 2023 Dayron Peeta
+    </p>
+</footer>    
 </body>
 
 </html>
